--- a/Source/Strive/Strive.Network/Strive.Network.Messaging/Strive.Network.Messaging.csproj
+++ b/Source/Strive/Strive.Network/Strive.Network.Messaging/Strive.Network.Messaging.csproj
@@ -99,6 +99,7 @@
     <Reference Include="System.Data">
       <Name>System.Data</Name>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
@@ -115,6 +116,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Connection.cs" />
+    <Compile Include="CustomFormatter.cs" />
     <Compile Include="Listener.cs">
       <SubType>Code</SubType>
     </Compile>
