--- a/Source/Strive/Strive.Common/Strive.Common.csproj
+++ b/Source/Strive/Strive.Common/Strive.Common.csproj
@@ -97,6 +97,7 @@
     <Reference Include="Common.Logging.Log4Net">
       <HintPath>..\..\ThirdParty\Common.Logging\Common.Logging.Log4Net.dll</HintPath>
     </Reference>
+    <Reference Include="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
