Finalized RecordedMapModel and started on PropertyMap

--- a/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
@@ -88,6 +88,10 @@
       <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
       <Name>Strive.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Strive.DataModel\Strive.DataModel.csproj">
+      <Project>{D0376168-4019-4358-BBE1-C9A2B33051BD}</Project>
+      <Name>Strive.DataModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Strive.Network\Strive.Network.Messaging\Strive.Network.Messaging.csproj">
       <Project>{757BF7D3-B811-48D7-AE27-0842B0522536}</Project>
       <Name>Strive.Network.Messaging</Name>
