--- a/Source/Strive/Strive.DataModel/Strive.DataModel.csproj
+++ b/Source/Strive/Strive.DataModel/Strive.DataModel.csproj
@@ -54,6 +54,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Ncqrs">
       <HintPath>..\..\ThirdParty\ncqrs\Ncqrs.dll</HintPath>
     </Reference>
@@ -65,12 +68,18 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="UpdateControls, Version=2.1.1.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
+      <HintPath>..\..\ThirdParty\UpdateControls\UpdateControls.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttributesSetEvent.cs" />
     <Compile Include="CommandService.cs" />
+    <Compile Include="DictionaryModel.cs" />
     <Compile Include="PhysicalObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyMap.cs" />
+    <Compile Include="RecordedMapModel.cs" />
     <Compile Include="SetAttributesCommand.cs" />
     <Compile Include="SetAttributesCommandExecutor.cs" />
     <Compile Include="World.cs" />
