--- a/Source/Strive/Strive.Client/Strive.Client.NeoAxisView/Strive.Client.NeoAxisView.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.NeoAxisView/Strive.Client.NeoAxisView.csproj
@@ -79,6 +79,9 @@
     <Reference Include="FileSystem">
       <HintPath>..\..\..\ThirdParty\NeoAxis\FileSystem.dll</HintPath>
     </Reference>
+    <Reference Include="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="GameCommon">
       <HintPath>..\..\..\ThirdParty\NeoAxis\GameCommon.dll</HintPath>
     </Reference>
