--- a/Source/Strive/Strive.Client/Strive.Client.NeoAxisView.Tests/Strive.Client.NeoAxisView.Tests.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.NeoAxisView.Tests/Strive.Client.NeoAxisView.Tests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{22192140-DB43-4403-9176-EC43516D1510}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Strive.Client.NeoAxisViewTests</RootNamespace>
-    <AssemblyName>Strive.Client.NeoAxisViewTests</AssemblyName>
+    <RootNamespace>Strive.Client.NeoAxisView.Tests</RootNamespace>
+    <AssemblyName>Strive.Client.NeoAxisView.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
