--- a/Source/Strive/Strive.Network/Strive.Network.Messaging.Tests/Strive.Network.Messaging.Tests.csproj
+++ b/Source/Strive/Strive.Network/Strive.Network.Messaging.Tests/Strive.Network.Messaging.Tests.csproj
@@ -88,6 +88,7 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConnectionTests.cs" />
     <Compile Include="CustomFormatterTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
