Adding chat window.  Made log window support copy+paste and color alternation.

--- a/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
@@ -76,6 +76,7 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChatLogViewModel.cs" />
     <Compile Include="EntityViewModel.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="InputBindings.cs" />
