Oh yeah - chat works

--- a/Source/Strive/Strive.WPF/Strive.WPF.csproj
+++ b/Source/Strive/Strive.WPF/Strive.WPF.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ListBoxBehavior.cs" />
     <Compile Include="ResourceListView.xaml.cs">
       <DependentUpon>ResourceListView.xaml</DependentUpon>
     </Compile>
