--- a/Source/Strive/Strive.WPF/Strive.WPF.csproj
+++ b/Source/Strive/Strive.WPF/Strive.WPF.csproj
@@ -78,6 +78,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TimeLineView.xaml.cs">
+      <DependentUpon>TimeLineView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ListBoxBehavior.cs" />
     <Compile Include="ResourceListView.xaml.cs">
       <DependentUpon>ResourceListView.xaml</DependentUpon>
@@ -100,6 +103,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="TimeLineView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="ResourceListView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
