--- a/Source/Strive/Strive.DataModel/Strive.DataModel.csproj
+++ b/Source/Strive/Strive.DataModel/Strive.DataModel.csproj
@@ -73,15 +73,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AttributesSetEvent.cs" />
+    <Compile Include="EventPropertySet.cs" />
     <Compile Include="CommandService.cs" />
     <Compile Include="DictionaryModel.cs" />
     <Compile Include="PhysicalObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyMap.cs" />
     <Compile Include="RecordedMapModel.cs" />
-    <Compile Include="SetAttributesCommand.cs" />
-    <Compile Include="SetAttributesCommandExecutor.cs" />
+    <Compile Include="CommandCreateJunk.cs" />
+    <Compile Include="CommandExecutorCreateJunk.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
