--- a/Source/Strive/Strive.Client/Strive.Client.Model/Strive.Client.Model.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.Model/Strive.Client.Model.csproj
@@ -71,9 +71,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PlanModel.cs" />
     <Compile Include="TaskModel.cs" />
     <Compile Include="EntityModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="History.cs" />
     <Compile Include="WorldModel.cs" />
   </ItemGroup>
   <ItemGroup>
