Switching to completely immutable world model

--- a/Source/Strive/Strive.Client/Strive.Client.Model/Strive.Client.Model.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.Model/Strive.Client.Model.csproj
@@ -69,9 +69,14 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="UpdateControls, Version=2.1.1.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
+      <HintPath>..\..\..\ThirdParty\UpdateControls\UpdateControls.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DictionaryModel.cs" />
     <Compile Include="PlanModel.cs" />
+    <Compile Include="RecordedModel.cs" />
     <Compile Include="TaskModel.cs" />
     <Compile Include="EntityModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
