--- a/Source/Strive/Strive.ImmutableDataModel/Strive.Model.fsproj
+++ b/Source/Strive/Strive.ImmutableDataModel/Strive.Model.fsproj
@@ -10,7 +10,7 @@
     <RootNamespace>Strive.ImmutableDataModel</RootNamespace>
     <AssemblyName>Strive.ImmutableDataModel</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <Name>Strive.ImmutableDataModel</Name>
+    <Name>Strive.Model</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,7 +40,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Module1.fs" />
+    <Compile Include="Model.fs" />
     <None Include="Script.fsx" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
