--- a/Source/Strive/Strive.DataModel.Tests/Strive.DataModel.Tests.csproj
+++ b/Source/Strive/Strive.DataModel.Tests/Strive.DataModel.Tests.csproj
@@ -54,9 +54,9 @@
     <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Strive.ImmutableDataModel\Strive.ImmutableDataModel.fsproj">
+    <ProjectReference Include="..\Strive.ImmutableDataModel\Strive.Model.fsproj">
       <Project>{3FE244C9-7E8C-42B0-92AF-4C5B4B9C385F}</Project>
-      <Name>Strive.ImmutableDataModel</Name>
+      <Name>Strive.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
