--- a/Source/Strive/Strive.Client/Strive.Client.Model.Tests/Strive.Client.Model.Tests.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.Model.Tests/Strive.Client.Model.Tests.csproj
@@ -48,7 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RecordedMapModelTests.cs" />
+    <Compile Include="RecordedModelTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Strive.DataModel\Strive.DataModel.csproj">
