Re-factored for manual dependency injection, then realized I don't need it.

--- a/Source/Strive/Strive.Network/Strive.Network.Messaging/Strive.Network.Messaging.csproj
+++ b/Source/Strive/Strive.Network/Strive.Network.Messaging/Strive.Network.Messaging.csproj
@@ -141,6 +141,7 @@
     </Compile>
     <Compile Include="Connection.cs" />
     <Compile Include="CustomFormatter.cs" />
+    <Compile Include="IListener.cs" />
     <Compile Include="Listener.cs">
       <SubType>Code</SubType>
     </Compile>
