--- a/Source/Strive/Strive.Server/Strive.Server.Logic.Tests/Strive.Server.Logic.Tests.csproj
+++ b/Source/Strive/Strive.Server/Strive.Server.Logic.Tests/Strive.Server.Logic.Tests.csproj
@@ -6,11 +6,11 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{694FD147-F833-49B8-8400-B05BCF99222A}</ProjectGuid>
+    <ProjectGuid>{9427C578-648C-4233-95CE-A34BF1226355}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Strive.DataModel.Tests</RootNamespace>
-    <AssemblyName>Strive.DataModel.Tests</AssemblyName>
+    <RootNamespace>Strive.Server.Logic.Tests</RootNamespace>
+    <AssemblyName>Strive.Server.Logic.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -33,15 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="UpdateControls, Version=2.1.1.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
-      <HintPath>..\..\ThirdParty\UpdateControls\UpdateControls.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -51,12 +46,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataModelTests.cs" />
+    <Compile Include="WorldTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Strive.ImmutableDataModel\Strive.Model.fsproj">
-      <Project>{3FE244C9-7E8C-42B0-92AF-4C5B4B9C385F}</Project>
-      <Name>Strive.Model</Name>
+    <ProjectReference Include="..\Strive.Server.Logic\Strive.Server.Logic.csproj">
+      <Project>{4895086D-8485-46EF-8DED-9E4C16227D64}</Project>
+      <Name>Strive.Server.Logic</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
