Fixing new model integration

--- a/Source/Strive/Strive.Model/Strive.Model.csproj
+++ b/Source/Strive/Strive.Model/Strive.Model.csproj
@@ -59,15 +59,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="PresentationCore" />
-    <Reference Include="Common.Logging, Version=2.0.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\ThirdParty\Common.Logging\Common.Logging.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
     <Reference Include="UpdateControls, Version=2.1.1.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
       <HintPath>..\..\..\ThirdParty\UpdateControls\UpdateControls.dll</HintPath>
@@ -82,16 +78,13 @@
     <Compile Include="EntityModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="History.cs" />
+    <Compile Include="TerrainModel.cs" />
     <Compile Include="WorldModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Strive.Common\Strive.Common.csproj">
+    <ProjectReference Include="..\Strive.Common\Strive.Common.csproj">
       <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
       <Name>Strive.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Strive.DataModel\Strive.DataModel.csproj">
-      <Project>{D0376168-4019-4358-BBE1-C9A2B33051BD}</Project>
-      <Name>Strive.DataModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
