--- a/Source/Strive/Strive.Network/Strive.Network.Messaging.Tests/Strive.Network.Messaging.Tests.csproj
+++ b/Source/Strive/Strive.Network/Strive.Network.Messaging.Tests/Strive.Network.Messaging.Tests.csproj
@@ -75,6 +75,10 @@
       <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
       <Name>Strive.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Strive.Model\Strive.Model.csproj">
+      <Project>{81F8F1E4-640B-45B7-9000-072D4C96F8A0}</Project>
+      <Name>Strive.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Strive.Network.Messages\Strive.Network.Messages.csproj">
       <Project>{EEEC18D5-063D-4DDD-8328-5182F1BA7F26}</Project>
       <Name>Strive.Network.Messages</Name>
