--- a/Source/Strive/Strive.DataModel.Tests/Strive.Model.Tests.csproj
+++ b/Source/Strive/Strive.DataModel.Tests/Strive.Model.Tests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{694FD147-F833-49B8-8400-B05BCF99222A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Strive.DataModel.Tests</RootNamespace>
-    <AssemblyName>Strive.DataModel.Tests</AssemblyName>
+    <RootNamespace>Strive.Model.Tests</RootNamespace>
+    <AssemblyName>Strive.Model.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentAssertions">
+      <HintPath>..\..\ThirdParty\FluentAssertions\FluentAssertions.dll</HintPath>
+    </Reference>
     <Reference Include="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
@@ -57,6 +60,10 @@
     <ProjectReference Include="..\Strive.Common\Strive.Common.csproj">
       <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
       <Name>Strive.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Strive.Model\Strive.Model.csproj">
+      <Project>{81F8F1E4-640B-45B7-9000-072D4C96F8A0}</Project>
+      <Name>Strive.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
